# bandiradar

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROMPT_PACK.md  README.md  STATUS.md  doctor.json  install-skill.sh  pyproject.toml  relay-worker.js
.github/workflows/: ci.yml  monitor.yml
data/fixtures/: .gitkeep  anac_history.jsonl  anac_sample.json  incentivi.json
data/profiles/: .gitkeep  costruzioni.yaml  hospitality_retail.yaml  manifattura.yaml  mayai.yaml  pmi_toscana.yaml
docs/: MCP.md  coverage-map.md  demo.tape  regions.md  self-heal-html-design.md  self-heal.tape
feeds/: consulenza.stats.json  consulenza.xml  costruzioni.json  costruzioni.stats.json  costruzioni.xml  mayai.json  mayai.xml  medtech_lombardia.json  medtech_lombardia.stats.json  medtech_lombardia.xml  piemonte_industria.json  piemonte_industria.stats.json  piemonte_industria.xml  pmi_toscana.stats.json  sardegna_impresa.json  sardegna_impresa.stats.json  sardegna_impresa.xml  sicilia_pmi.json  sicilia_pmi.stats.json  sicilia_pmi.xml
infra/vercel-relay/api/: relay.js
scripts/: build_comuni_map.py  build_cpv_map.py  build_pvl_eval.py  build_regional_eval.py  correct_gold.py  demo_self_heal.py  monitor_status.py  propose_regional_gold.py
skills/add-a-source/: SKILL.md
skills/bandiradar/: SKILL.md
src/bandiradar/: __init__.py  cli.py  config.py  core.py  cpv.py  crawl.py  documents.py  evaluation.py  exporters.py  http.py  mcp_server.py  models.py  ocp.py  recipe_store.py  resources.py  storage.py  trust.py
src/bandiradar/data/: comuni_it.json  cpv_it.json
src/bandiradar/data/eval/: anac_pvl_raw.jsonl  gold.yaml  opportunities.jsonl
src/bandiradar/data/fixtures/: anac_history.jsonl  anac_pvl.json  basilicata.json  calabria.json  campania.json  emilia_romagna.json  fvg.json  lazio.json  liguria.json  lombardia.json  piemonte.json  puglia.json  sardegna.json  sicilia.json  ted.json  toscana.json  trentino.json  veneto.json
src/bandiradar/data/profiles/: consulenza.yaml  costruzioni.yaml  hospitality_retail.yaml  manifattura.yaml  mayai.yaml  medtech_lombardia.yaml  piemonte_industria.yaml  pmi_toscana.yaml  sardegna_impresa.yaml  sicilia_pmi.yaml  studio_commercialisti.yaml
src/bandiradar/intelligence/: __init__.py  anac_history.py  benchmarks.py  enrichment.py  store.py
src/bandiradar/matching/: __init__.py  embeddings.py  llm.py  prefilter.py  prompts.py  relevance.py  rerank.py
src/bandiradar/sources/: __init__.py  anac.py  anac_pvl.py  base.py  basilicata.py  calabria.py  campania.py  emilia_romagna.py  fvg.py  heal.py  incentivi.py  lazio.py  liguria.py  llm_scraper.py  lombardia.py  piemonte.py  plone.py  puglia.py  sardegna.py  sicilia.py  ted.py  toscana.py  trentino.py  veneto.py  wordpress.py
tests/: conftest.py  synthetic_source.py  test_anac.py  test_anac_pvl.py  test_basilicata.py  test_batch.py  test_calabria.py  test_campania.py  test_cli.py  test_contracts.py  test_core.py  test_cpv.py  test_doctor.py  test_documents.py  test_embeddings.py  test_emilia_romagna.py  test_eval.py  test_fvg.py  test_heal.py  test_http.py  test_incentivi.py  test_intelligence.py  test_isolation.py  test_lazio.py  test_liguria.py  test_live.py  test_llm.py  test_llm_scraper.py  test_lombardia.py  test_mcp_server.py  test_models.py  test_monitor_status.py  test_piemonte.py  test_prefilter.py  test_puglia.py  test_regional_eval.py  test_relevance.py  test_rerank.py  test_resilience.py  test_sardegna.py  (+12 more)
tests/cassettes/: basilicata_listing.json  calabria_listing.json  campania_listing.html  fvg_listing.html  incentivi.json  lazio.json  liguria_listing.html  liguria_search_form.html  lombardia.json  piemonte_listing.html  puglia_listing.html  sardegna_listing.html  ted.json  toscana_detail.html  toscana_listing.json  toscana_listing_drifted.json  veneto_listing.html
