[project]
name = "bandiradar"
version = "0.1.0"
description = "Open-source engine that monitors Italian public funding opportunities (tenders, grants, incentives), normalizes them into one canonical model, and ranks them against a company profile with a two-stage matcher."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "MayAI" }]
keywords = ["bandi", "tenders", "grants", "anac", "pncp", "ocds", "funding", "italy"]

dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "typer>=0.12",
    "mcp>=1.2",
]

[project.scripts]
bandiradar = "bandiradar.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bandiradar"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible default set: pyflakes, pycodestyle, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
