[project]
name = "bandiradar"
version = "0.17.0"
description = "Monitor Italian public funding opportunities (tenders, grants, incentives) and rank them against a company profile."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "MayAI", email = "ciao@mayai.it" }]
keywords = ["bandi", "tenders", "grants", "anac", "pncp", "ocds", "funding", "italy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Natural Language :: Italian",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "typer>=0.12",
    "mcp>=1.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
]

[project.urls]
Homepage = "https://mayai.it"
Repository = "https://github.com/mayai-it/bandiradar"
Issues = "https://github.com/mayai-it/bandiradar/issues"
Changelog = "https://github.com/mayai-it/bandiradar/blob/main/CHANGELOG.md"

[project.scripts]
bandiradar = "bandiradar.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Live Stage-2 LLM scoring is OPTIONAL — the repo runs fully offline (heuristic
# fallback) without these. Install with `uv sync --extra anthropic`.
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
# OCR fallback for scanned PDFs (also needs system binaries: tesseract + poppler).
ocr = ["pytesseract>=0.3.10", "pdf2image>=1.17"]
# Optional semantic prefilter. fastembed is ONNX-based (NO torch); the multilingual
# model downloads ONCE on first use. Off unless explicitly enabled + installed.
embeddings = ["fastembed>=0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bandiradar"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible default set: pyflakes, pycodestyle, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.0"
# Deselect the opt-in live drift checks by default (they hit the network). Run
# them explicitly with `uv run pytest -m live`.
addopts = '-ra -m "not live"'
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: hits a real source endpoint over the network (opt-in; not run in CI)",
]
